--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
   <h1>Welcome to My Website</h1>
   <p>This is the homepage.</p>
+   <p>Click below to go to the form page:</p>
+  <a href="onlinedata.html">Go to Form Page</a>
 </body>
 </html>   
