--- a/onlinedata.html
+++ b/onlinedata.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Data Form</title>
-  <script>
-    async function submitForm(event) {
-      event.preventDefault();
-
-      const formData = new FormData(document.getElementById('userForm'));
-      const data = Object.fromEntries(formData.entries());
-
-      try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbxcZ_8z7tqyvY0R11B6ydyk8l4ZJUe-ZOm0plEPnkJk_diGQV7V89UnhoUCJ2B6e0MQ/exec', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
-
-        const result = await response.json();
-        alert(result.message);
-      } catch (error) {
-        alert('Error submitting data: ' + error.message);
-      }
-    }
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google Sheets Form</title>
 </head>
 <body>
-  <h1>Submit Your Data</h1>
-  <form id="userForm" onsubmit="submitForm(event)">
-    <label>
-      Name:
-      <input type="text" name="name" required>
-    </label><br><br>
-    <label>
-      Age:
-      <input type="number" name="age" required>
-    </label><br><br>
-    <label>
-      Address:
-      <input type="text" name="address" required>
-    </label><br><br>
-    <button type="submit">Submit</button>
+    <h1>User Data Form</h1>
+    <form id="userForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
 
-  </form>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea><br><br>
+
+        <button type="submit">Submit</button>
+    </form>
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbzi7eqwFi1Wpl-R56x7WEMZFQfQY8WSM2Sl5jdpi2QPLJNO_dquqtv6ZdVrKK_Es0aw/exec';
+        const form = document.getElementById('userForm');
+
+        form.addEventListener('submit', e => {
+            e.preventDefault();
+            const formData = new FormData(form);
+
+            fetch(scriptURL, { method: 'POST', body: formData })
+                .then(response => alert('Form submitted successfully!'))
+                .catch(error => alert('Error: ' + error.message));
+        });
+    </script>
 </body>
-  </html>
+</html>
