--- a/onlinedata.html
+++ b/onlinedata.html
@@ -15,7 +15,7 @@
         <input type="email" id="email" name="email" required><br><br>
 
         <label for="Adhar Number">Adhar:</label>
-        <input type="Adhar" id="adhar" name="Adhar" required><br><br>
+        <input type="text" id="adhar" name="Adhar" required><br><br>
 
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="4" required></textarea><br><br>
