--- a/onlinedata.html
+++ b/onlinedata.html
@@ -14,8 +14,8 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
 
-        <label for="Adhar Number">Adhar:</label>
-        <input type="text" id="adhar" name="adhar" required><br><br>
+        <label for="Adhar">Adhar:</label>
+        <input type="text" id="Adhar" name="Adhar" required><br><br>
 
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="4" required></textarea><br><br>
